# routes/web.php
@@ -15,5 +15,16 @@ $router->get('/', function () use ($router) {
     return $router->app->version();
 });
 
-$router->post('/demo', 'ExampleController@example');
-$router->get('/test', 'TestController@index');
+// swagger demo
+$router->group(['prefix' => 'sw'], function () use ($router) {
+    $router->post('/demo', 'ExampleController@demo');
+});
+
+
+// lumen 功能 demo
+$router->group(['prefix' => 'demo'], function () use ($router) {
+    $router->get('/index', 'DemoController@index');
+    $router->get('/ev', 'DemoController@eventDemo');
+    $router->get('/jo', 'DemoController@jobDemo');
+});
+
